[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywasm-ui"
version = "0.1.0"
description = "Server-driven UI protocol core for FastAPI/Flask backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pylint>=3.0"
]
fastapi = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32"
]
flask = [
  "flask>=3.0",
  "flask-sock>=0.7"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pywasm_ui*"]
