[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pywasm-ui"
version = "0.1.0"
description = "Server-driven UI protocol core for FastAPI/Flask backends"
authors = ["PyWASMui contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Jfrequelin/PyWASMUi"
repository = "https://github.com/Jfrequelin/PyWASMUi"
keywords = ["wasm", "ui", "fastapi", "flask", "websocket"]
packages = [
  { include = "pywasm_ui" }
]
include = [
  { path = "pywasm_ui/py.typed", format = ["sdist", "wheel"] },
  { path = "pywasm_ui/frontend/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=2.10"
fastapi = { version = ">=0.115", optional = true }
uvicorn = { version = ">=0.32", extras = ["standard"], optional = true }
flask = { version = ">=3.0", optional = true }
flask-sock = { version = ">=0.7", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pylint = ">=3.0"

[tool.poetry.extras]
fastapi = ["fastapi", "uvicorn"]
flask = ["flask", "flask-sock"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Jfrequelin/PyWASMUi/issues"
