[package]
name = "wasm_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
hmac = "0.12"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Node",
  "Event",
  "EventTarget",
  "MessageEvent",
  "console"
] }
console_error_panic_hook = "0.1"
